fix: change z-index value

--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@ input[type='file'] {
 }
 
 .username__icon {
-  z-index: 1;
+  z-index: 10;
 }
 
 .password__icon {
